# KnightOnline

./: .dockerignore  .env.example  .gitignore  DOCKER-AISERVER-CONNECTION-FIX.md  DOCKER-AISERVER-FIX-V2.md  DOCKER-ALL-FIXES-SUMMARY.md  DOCKER-ARCHITECTURE.md  DOCKER-BUILD-FIX.md  DOCKER-DATABASE-CONNECTION-FIX.md  DOCKER-ENTRYPOINT-FIX.md  DOCKER-FD-CLOSE-FIX.md  DOCKER-FIXES-SUMMARY.md  DOCKER-IMPLEMENTATION-SUMMARY.md  DOCKER-KURULUM.md  DOCKER-MAP-PATH-FIX.md  DOCKER-QUICKREF.md  DOCKER-SERVER-ARGS-FIX.md  DOCKER-SETUP.md  README.md  WINDOWS-SCRIPT-REHBERI.md  default.env  docker-compose.yaml
docker/: README.MD  clean_setup.ps1  reset_database.ps1  resume_containers.ps1  start_all.cmd  start_all.ps1  start_all.sh  stop_all.cmd  stop_all.ps1  stop_all.sh  stop_containers.ps1  uninstall.ps1
docker/server/: AIServer.ini  Aujard.ini  Dockerfile  Ebenezer.ini  Notice.txt  VersionManager.ini  entrypoint.sh
src/Client/WarFare/: Resource.rc
src/Server/AIServer/: AIServerApp.cpp  AIServerApp.h  AISocketManager.cpp  AISocketManager.h  GameSocket.cpp  GameSocket.h  Npc.cpp  SendThreadMain.cpp  SendThreadMain.h
src/Server/Ebenezer/: AISocket.cpp  AISocket.h  EbenezerApp.cpp  EbenezerApp.h  EbenezerReadQueueThread.cpp  EbenezerSocketManager.cpp  EbenezerSocketManager.h  KnightsManager.cpp  MagicProcess.cpp  OperationMessage.cpp  SendWorkerThread.cpp  SendWorkerThread.h  UdpSocket.cpp  User.cpp  User.h
src/Server/VersionManager/: User.cpp  User.h  VersionManagerApp.cpp  VersionManagerApp.h
src/Server/shared-server/: CMakeLists.txt  TcpClientSocket.cpp  TcpClientSocket.h  TcpClientSocketManager.cpp  TcpClientSocketManager.h  TcpServerSocket.cpp  TcpServerSocket.h  TcpServerSocketManager.cpp  TcpServerSocketManager.h  TcpSocket.cpp  TcpSocket.h  TcpSocketManager.cpp  TcpSocketManager.h  shared-server.vcxproj  shared-server.vcxproj.filters
